--- a/writeup/writeup_erika_garzaelorduy.qmd
+++ b/writeup/writeup_erika_garzaelorduy.qmd
@@ -154,7 +154,8 @@ Our replication of Experiment 1 will closely mirror the original study’s 2x2 f
 
 #### Raw Data Processing
 
-```{r}
+```{r, echo = TRUE, message = FALSE, warning = FALSE}
+
 #### Load necessary libraries
 library(tidyverse)
 library(dplyr)
@@ -256,6 +257,7 @@ output_path <- "../data/cleaned_data_final.csv"
 
 # Save the final combined cleaned_data tibble as a CSV file
 write_csv(cleaned_data, output_path)
+
 ```
 
 #### Combined Data Processing
@@ -692,19 +694,23 @@ print(eta2_certain_combined)
 
 ### Interpretation
 
-Did the result replicate? Think both about the key test result and the larger pattern of results (ex. If there were both main effects and interactions, or two dependent measures, etc) A brief commentary on why it might have turned out this way
+The analysis tested the hypothesis that individuals who make quick decisions about moral dilemmas are perceived as having stronger moral convictions than those who deliberate longer. A 2 (moral condition: moral vs. immoral) x 2 (decision speed: quick vs. slow) ANOVA was performed on group means of moral character evaluations in both the combined dataset and our group (3) dataset. For the combined dataset, there was a significant main effect of moral condition, with participants ranking moral decisions higher than immoral ones (F(1, 194) = 108.06, p < 2e-16). The pattern of interaction of moral condition and decision speed showed a significant interaction effect: moral character evaluations were generally amplified by decision speed, with quick decisions judged more favorably in moral scenarios and more harshly in immoral scenarios (F(1, 194) = 70.71, p = 8.83e-15). These findings align with the hypothesis that decision speed influences the strength of perceived moral convictions.
+
+In the Group 3 dataset, similar patterns emerged, with a significant interaction effect between moral condition and decision speed (F(1, 184) = 92.63, p < .001). In moral contexts, quick decisions produced the highest evaluations of character, while slow judgments moderated evaluations within both moral and immoral contexts.
+
+Additional exploratory analyses assessed perceived certainty as a covariate. These analyses revealed that faster decisions were related to greater perceived certainty (F(1, 408) = 218.43, p < 2e-16), further supporting the hypothesis that the speed of decision correlates with moral conviction. However, no significant main effect of moral condition (F(1, 408) = 0.275, p = 0.600) or interaction effect between condition and speed (F(1, 408) = 0.417, p = 0.519) was found. These results suggest that decision speed, rather than moral condition, drives perceptions of certainty.
 
 ## Discussion
 
-This replication attempt validates the original study’s conclusion that quick decisions amplify perceptions of moral clarity and character, while slower decisions moderate these evaluations. This suggests that people interpret decision speed as an indicator of conviction, influencing how moral character is judged in various contexts.
+Overall, this replication attempt validates the original study’s conclusion that quick decisions amplify perceptions of moral clarity and character, while slower decisions moderate these evaluations. This suggests that people interpret decision speed as an indicator of conviction, influencing how moral character is judged in various contexts.
 
-Despite the successful replication, limitations include the use of an online sample via Prolific, which introduces variability compared to the original, in-person, university-based sample, and the simplified wallet scenario, which may not fully reflect the complexity of real-world moral dilemmas. Additionally, the experiment’s questions were verbose and highly similar, leading us to suspect—supported by variance tests—that participants were not fully reading and carefully weighing each question, which may have reduced the validity of the responses.
+Despite the successful replication, limitations include the use of an online sample via Prolific, which introduces variability compared to the original, in-person, university-based sample, and the simplified wallet scenario, which may not fully reflect the complexity of real-world moral dilemmas. Additionally, the experiment’s questions were verbose and highly similar, leading us to suspect —supported by variance tests— that participants were not fully reading and carefully weighing each question, which may have reduced the validity of the responses.
 
 Future research could build on these findings by examining diverse moral dilemmas (as done in Experiment 2 of the original study), cultural differences in moral judgments, and the role of contextual factors such as stress and external pressures.
 
 ### Summary of Replication Attempt
 
-Fortunately, the replication study conducted successfully reproduced the key findings of the original study: confirming that decision speed amplifies moral evaluations. As mentioned above, quick moral decisions were judged more favorably, while quick immoral decisions were judged more harshly, with slower decisions leading to mroe moderate evaluations. The experiment and analyses conducted adhered closely to the original methodology and extend its generalizability by recruiting a more diverse online participant sample. These results support the robustness of the original findings and highlight areas for further exploration: mainly investigating more complex scenarios and polishing question design to enhance data quality. Overall, this replication underscores the reliability of the original study’s findings and highlights the importance of replication for advancing psychological research.
+Fortunately, the replication study conducted successfully reproduced the key findings of the original study: confirming that decision speed amplifies moral evaluations. As mentioned above, quick moral decisions were judged more favorably, while quick immoral decisions were judged more harshly, with slower decisions leading to more moderate evaluations. The experiment and analyses conducted adhered closely to the original methodology and extend its generalizability by recruiting a more diverse online participant sample. These results support the robustness of the original findings and highlight areas for further exploration: mainly, investigating more complex scenarios and polishing question design to enhance data quality. Overall, this replication underscores the reliability of the original study’s findings and highlights the importance of replication for advancing psychological research.
 
 ### Commentary
 
