--- a/writeup/writeup_erika_garzaelorduy.qmd
+++ b/writeup/writeup_erika_garzaelorduy.qmd
@@ -694,7 +694,7 @@ print(eta2_certain_combined)
 
 ### Interpretation
 
-The analysis tested the hypothesis that individuals who make quick decisions about moral dilemmas are perceived as having stronger moral convictions than those who deliberate longer. A 2 (moral condition: moral vs. immoral) x 2 (decision speed: quick vs. slow) ANOVA was performed on group means of moral character evaluations in both the combined dataset and our group (3) dataset. For the combined dataset, there was a significant main effect of moral condition, with participants ranking moral decisions higher than immoral ones (F(1, 194) = 108.06, p < 2e-16). The pattern of interaction of moral condition and decision speed showed a significant interaction effect: moral character evaluations were generally amplified by decision speed, with quick decisions judged more favorably in moral scenarios and more harshly in immoral scenarios (F(1, 194) = 70.71, p = 8.83e-15). These findings align with the hypothesis that decision speed influences the strength of perceived moral convictions.
+The analysis tested the hypothesis that individuals who make quick decisions about moral dilemmas are perceived as having stronger moral convictions than those who deliberate longer. A 2 (moral condition: moral vs. immoral) x 2 (decision speed: quick vs. slow) ANOVA was performed on group means of moral character evaluations in both the combined dataset and our group (3) dataset. For the combined dataset, there was a significant main effect of moral condition, with participants ranking moral decisions higher than immoral ones (F(1, 194) = 108.06, p < 2e-16). While the main effect of decision speed was not significant in the combined dataset (F(1, 408) = 0.053, p = .819), it reached significance in the Group 3 dataset (F(1, 184) = 5.01, p = .026), indicating that decision speed played a stronger role in shaping moral evaluations within this subset. The pattern of interaction of moral condition and decision speed showed a significant interaction effect: moral character evaluations were generally amplified by decision speed, with quick decisions judged more favorably in moral scenarios and more harshly in immoral scenarios (F(1, 194) = 70.71, p = 8.83e-15). These findings align with the hypothesis that decision speed influences the strength of perceived moral convictions.
 
 In the Group 3 dataset, similar patterns emerged, with a significant interaction effect between moral condition and decision speed (F(1, 184) = 92.63, p < .001). In moral contexts, quick decisions produced the highest evaluations of character, while slow judgments moderated evaluations within both moral and immoral contexts.
 
@@ -704,7 +704,7 @@ Additional exploratory analyses assessed perceived certainty as a covariate. The
 
 Overall, this replication attempt validates the original study’s conclusion that quick decisions amplify perceptions of moral clarity and character, while slower decisions moderate these evaluations. This suggests that people interpret decision speed as an indicator of conviction, influencing how moral character is judged in various contexts.
 
-Despite the successful replication, limitations include the use of an online sample via Prolific, which introduces variability compared to the original, in-person, university-based sample, and the simplified wallet scenario, which may not fully reflect the complexity of real-world moral dilemmas. Additionally, the experiment’s questions were verbose and highly similar, leading us to suspect —supported by variance tests— that participants were not fully reading and carefully weighing each question, which may have reduced the validity of the responses.
+Despite the successful replication, limitations include the use of an online sample via Prolific, which introduces variability compared to the original, in-person, university-based sample, and the simplified wallet scenario, which may not fully reflect the complexity of real-world moral dilemmas. Additionally, the experiment’s questions were verbose and highly similar, leading us to suspect—supported by variance tests—that participants were not fully reading and carefully weighing each question, which may have reduced the validity of the responses.
 
 Future research could build on these findings by examining diverse moral dilemmas (as done in Experiment 2 of the original study), cultural differences in moral judgments, and the role of contextual factors such as stress and external pressures.
 
