--- a/writeup/writeup_erika_garzaelorduy.qmd
+++ b/writeup/writeup_erika_garzaelorduy.qmd
@@ -5,7 +5,7 @@ date_format <- format(Sys.time(), '%B %d, %Y')
 
 ---
 title: "Replication of Study 'How Quick Decisions Illuminate Moral Character' by Clayton R. Critcher, Yoel Inbar and David A. Pizarro (2013, Social Psychological and Personality Science)"
-author: "Critcher_2013_3"
+author: "Erika Garza-Elorduy egarzaelorduy@ucsd.edu"
 date: "`r Sys.Date()`"
 format:
   html:
